
@startuml
class CustomUserDetails {
    - user : User
    - authorities : Collection<? extends GrantedAuthority>

    + CustomUserDetails(user : User)
    + CustomUserDetails(user : User, authorities : Collection<? extends GrantedAuthority>)
    + getAuthorities() : Collection<? extends GrantedAuthority>
    + getPassword() : String
    + getUsername() : String
    + isAccountNonExpired() : boolean
    + isAccountNonLocked() : boolean
    + isCredentialsNonExpired() : boolean
    + isEnabled() : boolean
}

class User {
}

interface UserDetails {
}

class GrantedAuthority {
}

CustomUserDetails -up-|> UserDetails : implements
CustomUserDetails --> "1" User : has
CustomUserDetails --> "*" GrantedAuthority : has

@enduml
